# clio-mcp-server

./: .client-names.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: deploy.md  eval-deep.md  eval.md  review.md
.github/workflows/: ci.yml
docs/: architecture.excalidraw
evals/: README.md  cases.py  harness.py  scoring.py
scripts/: check_client_names.py
src/clio_mcp/: client.py  exceptions.py  models.py  observability.py  server.py
src/clio_mcp/auth/: __init__.py  __main__.py  bootstrap.py  client.py  exceptions.py  models.py  token_store.py
src/clio_mcp/tools/: contacts.py  matters.py
tests/: test_client.py  test_evals_score.py  test_models.py  test_observability.py  test_tool_spans.py
tests/auth/: test_client.py  test_get_access_token.py  test_models.py  test_token_store.py
tests/test_tools/: test_contacts.py  test_matters.py
