[project]
name = "clio-mcp-server"
version = "0.1.0"
description = "MCP server exposing Clio practice management API as tools for AI assistants"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Tom" }]
dependencies = [
    "fastmcp",
    "httpx",
    "platformdirs>=4.9.6",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
eval = [
    "anthropic",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clio_mcp"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
