[project]
name = "clio-mcp-server"
version = "0.1.0"
description = "MCP server exposing Clio practice management API as tools for AI assistants"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Tom" }]
dependencies = [
    "fastmcp",
    "httpx",
    "platformdirs>=4.9.6",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.scripts]
clio-mcp = "clio_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clio_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]
evals = [
    "anthropic>=0.96.0",
    "mcp>=1.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (includes F401 unused imports)
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
    "B008",  # function call in default arg (common in FastMCP)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow `assert False` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
